--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
             </label>
             <p>Tries: <span id="triesCounter">0</span></p>
         </div>
-        <h3>Rock Paper Scissors Game</h3>
-        <p>Choose your move:</p>
-        <button class="button" id="rockButton">Rock</button>
-        <button class="button" id="paperButton">Paper</button>
-        <button class="button" id="scissorsButton">Scissors</button>
-        <p id="result"></p>
-        <p>Round: <span id="roundCounter">1</span></p>
-        <h3>Acknowledgements</h3>
-        <p>Thank you to these resources for helping me with syntax and javascript concepts</p>
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a><br>
-        <a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a>
+        <div class="form">
+            <h3>Rock Paper Scissors Game</h3>
+            <p>Choose your move:</p>
+            <button class="button" id="rockButton">Rock</button>
+            <button class="button" id="paperButton">Paper</button>
+            <button class="button" id="scissorsButton">Scissors</button>
+            <p id="result"></p>
+            <p>Round: <span id="roundCounter">1</span></p>
+        </div>
+        <div class="form">
+            <h3>Acknowledgements</h3>
+            <p>Thank you to these resources for helping me with syntax and javascript concepts</p>
+            <a href="https://www.w3schools.com/" target="_blank">W3Schools</a><br>
+            <a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a>
+        </div>
     </body>
 </html>
