--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
             <p>Round: <span id="roundCounter">1</span></p>
         </div>
         <div class="form">
+            <a href="rpgGame.html" target="_blank">Click Here For Secret Page</a>
+        </div>
+        <div class="form">
             <h3>Acknowledgements</h3>
             <p>Thank you to these resources for helping me with syntax and javascript concepts</p>
             <a href="https://www.w3schools.com/" target="_blank">W3Schools</a><br>
             <a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a>
+            <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a>
         </div>
     </body>
 </html>
