--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Programming Assignment 4</title>
+        <title>Miscellaneous Projects</title>
     </head>
     <body>
-        <script type="text/javascript" src="script.js"></script>
-        <h1>Programming Assignment 4</h1>
-        <h2>By Victory Ma</h2>
-        <div style="text-align: center;">
-            <a href="https://github.com/VictoryMa8" target="_blank">My GitHub Page - Victory Ma</a>
+        <div id="hero">
+            <h1>Miscellaneous Projects</h1>
+            <h2>By Victory Ma</h2>
+            <a href="https://github.com/VictoryMa8" target="_blank">My GitHub Page</a>
         </div>
-        <div class="form">
+        <div id="ngg">
             <h3>Number Guessing Game</h3>
-            <p class="pClass">We have a number in mind that is between 1 and 10. Try and guess the number!</p>
+            <p>We have a number in mind that is between 1 and 10. Try and guess the number!</p>
             <label for="userGuess">
                 Enter your guess:
                 <input type="text" id="userGuess" class="userGuess">
@@ -22,7 +21,7 @@
             </label>
             <p>Tries: <span id="triesCounter">0</span></p>
         </div>
-        <div class="form">
+        <div id="rpsg">
             <h3>Rock Paper Scissors Game</h3>
             <p>Choose your move:</p>
             <button class="button" id="rockButton">Rock</button>
@@ -31,15 +30,16 @@
             <p id="result"></p>
             <p>Round: <span id="roundCounter">1</span></p>
         </div>
-        <div class="form">
-            <a href="rpgGame.html" target="_blank">Click Here For Secret Page</a>
+        <div id="rpgg">
+            <a href="rpgGame.html">Click Here For 'World Defender'</a>
         </div>
-        <div class="form">
+        <div id="ackn">
             <h3>Acknowledgements</h3>
-            <p>Thank you to these resources for helping me with syntax and javascript concepts</p>
-            <a href="https://www.w3schools.com/" target="_blank">W3Schools</a><br>
-            <a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a>
+            <p>Thank you to these resources for helping me create this website.</p>
+            <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+            <a href="https://www.geeksforgeeks.org/" target="_blank">GeeksForGeeks</a><br>
             <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a>
         </div>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
