--- a/rpgGame.html
+++ b/rpgGame.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./rpgStyle.css">
-    <title>RPG - Dragon Repeller</title>
+    <title>RPG - Ancient Egypt</title>
   </head>
   <body>
     <div id="game">
@@ -13,20 +13,20 @@
         <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
       </div>
       <div id="controls">
-        <button id="button1">Go to store</button>
-        <button id="button2">Go to cave</button>
-        <button id="button3">Fight dragon</button>
+        <button id="button1">Go To Store</button>
+        <button id="button2">Go To Ancient Ruins</button>
+        <button id="button3">Fight Geb, God of the Earth</button>
       </div>
       <div id="monsterStats">
         <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
         <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
       </div>
       <div id="text">
-        Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
+        Welcome to Egypt. You are a noble warrior who is tasked with defeating Geb, God of the Earth. You must defeat him and make him dormant once again, in order to save the world. You can go to the store to buy items, go to the ancient ruins, or fight Geb himself. Good luck.
       </div>
     </div>
     <div id="backDiv">
-      <button id="back">Go Back</button>
+      <button id="back">Go Back To Homepage</button>
     </div>
     <script src="./rpgScript.js"></script>
   </body>
