Various changes to the game

--- a/rpgGame.html
+++ b/rpgGame.html
@@ -8,8 +8,9 @@
   <body>
     <div id="game">
       <div id="stats">
+        <span class="stat">Level: <strong><span id="levelText">0</span></strong></span>
         <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
-        <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
+        <span class="stat">Health: <strong><span id="healthText">100</span>/<span id="maxHealthText">100</span></strong></span>
         <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
       </div>
       <div id="controls">
@@ -23,6 +24,9 @@
       </div>
       <div id="text">
         Welcome to Egypt. You are a noble warrior who is tasked with defeating Geb, God of the Earth. You must defeat him and make him dormant once again, in order to save the world. You can go to the store to buy items, go to the ancient ruins, or fight Geb himself. Good luck.
+      </div>
+      <div id="text2">
+        
       </div>
     </div>
     <div id="backDiv">
